# future-hak

./: .env  README.md  Viktoria.sln  build.gradle.kts  local.properties  pyproject.toml
accounts/: backends.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
core/: scheduler.py  urls.py  utils.py  views.py
dashboard/: forms.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_comment.py
future/: settings.py  urls.py
static/css/: admin-analytics.css  admin-comments.css  admin-posts.css  admin-teg.css  admin-users.css  admin.css  comment.css  desktop.ini  forgot-password.css  list-place.css  login.css  main.css  place.css  post.css  profile.css  redact.css  register.css
static/js/: admin-analytics.js  admin-comments.js  admin-posts.js  admin-teg.js  admin-users.js  admin.js  comment.js  desktop.ini  forgot-password.js  list-place.js  login.js  main.js  place.js  post.js  profile.js  redact.js  register.js
templates/: home.html
templates/auth/: forgot-password.html  login.html  register.html
templates/core/: main.html
templates/dashboard/: admin-analytics.html  admin-comments.html  admin-posts.html  admin-users.html  admin.html
templates/user/: comment.html  list-place.html  place.html  post.html  profile.html  redact.html
user/: forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
