[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "dimon0804",email = "dimongamedeveloper@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2,<6.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
migrate = "manage:manage_command"
runserver = "manage:manage_command"
createsuperuser = "manage:manage_command"

[tool.poetry]
package-mode = false
