[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "dimon0804",email = "dimongamedeveloper@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2,<6.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "celery (==5.3.6)",
    "redis (==4.5.5)",
    "kombu (==5.3.4)",
    "pytz (>=2025.2,<2026.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "django-cron (>=0.6.0,<0.7.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
migrate = "manage:manage_command"
runserver = "manage:manage_command"
createsuperuser = "manage:manage_command"

[tool.poetry]
package-mode = false
